# loadcell_device_a

./: CMakeLists.txt
components/hx711_bogde/: CMakeLists.txt  hx711_bogde.cpp
components/hx711_bogde/include/: hx711_bogde.h
components/hx711_driver/: CMakeLists.txt  hx711_driver.cpp
components/hx711_driver/include/: hx711_driver.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/comm/: comm_esp_now.c  comm_esp_now.h
main/helpers/: common_data.h  common_headers.h  hardware_config.h
main/sensors/: sensor.c  sensor.h
main/storage/: nvs_interface.c  nvs_interface.h
main/task/: comm_task.c  comm_task.h  loadcell_task.c  loadcell_task.h  main_task.c  main_task.h  oled_task.c  oled_task.h
